# demo_dialogflow_bot

./: README.md  for_bot.flac
dialogflow_bot/: Cargo.toml
dialogflow_bot/src/: main.rs
src/: main.rs
