[package]
name = "dialogflow_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
reqwest = { version = "0.12.3", features = ["json"]}
serde_json = "1.0.115"
serde = {version = "1.0.197", features = ["derive"]}
tokio = { version = "1.37.0", features = ["full"] }
